feat(server): adding checkbox to apply all or any of selected tags (#4)
* adding checkbox to apply all or any of selected tags
