# open-api/immich-openapi-specs.json
@@ -9856,6 +9856,9 @@
       },
       "MetadataSearchDto": {
         "properties": {
+          "anyTags": {
+            "type": "boolean"
+          },
           "checksum": {
             "type": "string"
           },
@@ -10550,6 +10553,9 @@
       },
       "RandomSearchDto": {
         "properties": {
+          "anyTags": {
+            "type": "boolean"
+          },
           "city": {
             "nullable": true,
             "type": "string"
@@ -11493,6 +11499,9 @@
       },
       "SmartSearchDto": {
         "properties": {
+          "anyTags": {
+            "type": "boolean"
+          },
           "city": {
             "nullable": true,
             "type": "string"
