# server/src/entities/asset.entity.ts
@@ -258,16 +258,18 @@ export function hasPeople<O>(qb: SelectQueryBuilder<DB, 'assets', O>, personIds:
   );
 }
 
-export function hasTags<O>(qb: SelectQueryBuilder<DB, 'assets', O>, tagIds: string[]) {
+export function hasTags<O>(qb: SelectQueryBuilder<DB, 'assets', O>, tagIds: string[], anyTags?: boolean) {
   return qb.innerJoin(
     (eb) =>
       eb
         .selectFrom('tag_asset')
         .select('assetsId')
         .innerJoin('tags_closure', 'tag_asset.tagsId', 'tags_closure.id_descendant')
-        .where('tags_closure.id_ancestor', '=', anyUuid(tagIds))
+        .where('tags_closure.id_ancestor', '=', anyUuid(tagIds!))
         .groupBy('assetsId')
-        .having((eb) => eb.fn.count('tags_closure.id_ancestor').distinct(), '>=', tagIds.length)
+        .$if(!anyTags, (eb) =>
+          eb.having((eb) => eb.fn.count('tags_closure.id_ancestor').distinct(), '>=', tagIds.length),
+        )
         .as('has_tags'),
     (join) => join.onRef('has_tags.assetsId', '=', 'assets.id'),
   );
@@ -347,7 +349,7 @@ export function searchAssetBuilder(kysely: Kysely<DB>, options: AssetSearchBuild
     .withPlugin(joinDeduplicationPlugin)
     .selectFrom('assets')
     .selectAll('assets')
-    .$if(!!options.tagIds && options.tagIds.length > 0, (qb) => hasTags(qb, options.tagIds!))
+    .$if(!!options.tagIds && options.tagIds.length > 0, (qb) => hasTags(qb, options.tagIds!, options.anyTags))
     .$if(!!options.personIds && options.personIds.length > 0, (qb) => hasPeople(qb, options.personIds!))
     .$if(!!options.createdBefore, (qb) => qb.where('assets.createdAt', '<=', options.createdBefore!))
     .$if(!!options.createdAfter, (qb) => qb.where('assets.createdAt', '>=', options.createdAfter!))
